# isegeval

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
isegeval/: __init__.py  core.py  utils.py
isegeval/click/: __init__.py  factories.py  factory.py  strategies.py  strategy.py
notebooks/: paddle.ipynb
tests/: test_core.py  test_utils.py
tests/click/: test_strategies.py
