[tool.poetry]
name = "isegeval"
version = "0.1.0"
description = "A Python Library to Evaluate Interactive Segmentation Models"
authors = ["yasufumi <yasufumi.taniguchi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tech-sketch/isegeval"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "^1.23.5"
scipy = "^1.9.3"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.11.1"
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_error_codes = true

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
